[package]
name = "gametank-libretro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gametank-emulator-core = {path="../gametank-emulator-core"}

[dependencies.libretro-rs]
git = "https://github.com/libretro-rs/libretro-rs"
rev = "c7f414d19d837921b8762656e53e7f1b8f892179"

